Fixed the viewport overflow issue

--- a/style.css
+++ b/style.css
@@ -88,8 +88,10 @@ background-size: 100px 100px, 100px 100px, 50px 50px, 50px 50px; */
 
     height: 100vh;
     width: 100vw;
-
+    
     letter-spacing: -2px;
+    
+    box-sizing: border-box;
 
 }
 
